--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ Font-size: 1.3em;
 	<div class="column left">
 		<br><br><br><br><br><br><br><br>
 		<h2 class="hidden-mobile">Interior design</h2>
-		<img class="hidden-mobile" src="file:///Users/giovannidimaio/Desktop/Website%20test/chairs.png" width="200">
+		<img class="hidden-mobile" src="file:///Users/giovannidimaio/Desktop/Website%20test/chairs.PNG" width="200">
 	</div>
 	<div class="column middle">
 		<img src="file:///Users/giovannidimaio/Desktop/Website%20test/image.png" width="200">
