--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         font-family: 'Hendrickson';
         font-weight: 400;
         font-style: normal;
-        src: url('file:///Users/giovannidimaio/Desktop/Website%20test/Hendrickson-K7GOD.otf') format('truetype');
+        src: url('/Hendrickson-K7GOD.otf') format('truetype');
         unicode-range: U+0020-007E, U+2010, U+2013-2014, U+2018-2019, U+201C-201D;
         font-display: swap
     }
@@ -117,19 +117,19 @@ Font-size: 1.3em;
 	<div class="column left">
 		<br><br><br><br><br><br><br><br>
 		<h2 class="hidden-mobile">Interior design</h2>
-		<img class="hidden-mobile" src="file:///Users/giovannidimaio/Desktop/Website%20test/chairs.PNG" width="200">
+		<img class="hidden-mobile" src="/chairs.PNG" width="200">
 	</div>
 	<div class="column middle">
-		<img src="file:///Users/giovannidimaio/Desktop/Website%20test/image.png" width="200">
+		<img src="/image.png" width="200">
 		<h1>Harriet Di Maio</h1>
-		<img src="file:///Users/giovannidimaio/Desktop/Website%20test/line.png" width="200">
+		<img src="/line.png" width="200">
 		<h3>Designer</h3>
 		<h4>021437787</h4>
 	</div>
 	<div class="column right"
 		<br><br><br><br><br><br><br><br>
 		<h2 class="hidden-mobile">Set painting & design</h2>
-		<img class="hidden-mobile" src="file:///Users/giovannidimaio/Desktop/Website%20test/set2.PNG" width="400">
+		<img class="hidden-mobile" src="/set2.PNG" width="400">
 	</div>
 </div>
 
