--- a/index.html
+++ b/index.html
@@ -117,19 +117,19 @@ Font-size: 1.3em;
 	<div class="column left">
 		<br><br><br><br><br><br><br><br>
 		<h2 class="hidden-mobile">Interior design</h2>
-		<img class="hidden-mobile" src="/chairs.PNG" width="200">
+		<img class="hidden-mobile" src="https://harrietdimaio.github.io/hdmdesign/chairs.png" width="200">
 	</div>
 	<div class="column middle">
-		<img src="/image.png" width="200">
+		<img src="https://harrietdimaio.github.io/hdmdesign/image.png" width="200">
 		<h1>Harriet Di Maio</h1>
-		<img src="/line.png" width="200">
+		<img src="https://harrietdimaio.github.io/hdmdesign/line.png" width="200">
 		<h3>Designer</h3>
 		<h4>021437787</h4>
 	</div>
 	<div class="column right"
 		<br><br><br><br><br><br><br><br>
 		<h2 class="hidden-mobile">Set painting & design</h2>
-		<img class="hidden-mobile" src="/set2.PNG" width="400">
+		<img class="hidden-mobile" src="https://harrietdimaio.github.io/hdmdesign/set2.png" width="400">
 	</div>
 </div>
 
