--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Font-size: 1.3em;
 	<div class="column right"
 		<br><br><br><br><br><br><br><br>
 		<h2 class="hidden-mobile">Set painting & design</h2>
-		<img class="hidden-mobile" src="https://harrietdimaio.github.io/hdmdesign/set2.png" width="400">
+		<img class="hidden-mobile" src="https://harrietdimaio.github.io/hdmdesign/setdesign.png" width="400">
 	</div>
 </div>
 
