--- a/index.html
+++ b/index.html
@@ -121,10 +121,11 @@ Font-size: 1.3em;
 	</div>
 	<div class="column middle">
 		<img src="https://harrietdimaio.github.io/hdmdesign/image.png" width="200">
-		<h1>Harriet Di Maio</h1>
+		<h1>HDM Design</h1>
 		<img src="https://harrietdimaio.github.io/hdmdesign/line.png" width="200">
-		<h3>Designer</h3>
+		<h3>Harriet Di Maio - Designer</h3>
 		<h4>021437787</h4>
+		<h4><a href="mailto:harriet@hdmdesign.co.nz">harriet@hdmdesign.co.nz</a></h4>
 	</div>
 	<div class="column right"
 		<br><br><br><br><br><br><br><br>
