--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 }
 
 @font-face {
-        font-family: 'Hendrickson';
+        font-family: 'Arial Light';
         font-weight: 400;
         font-style: normal;
-        src: url('/Hendrickson-K7GOD.otf') format('truetype');
+        src: url('/ArialMTStd-Light.otf') format('truetype');
         unicode-range: U+0020-007E, U+2010, U+2013-2014, U+2018-2019, U+201C-201D;
         font-display: swap
     }
@@ -67,7 +67,7 @@ img {
 
 h1 {
  font-weight: normal;
-font-family: "Menlo";
+font-family: "Arial Light";
 font-stretch: expanded;
 line-height: 50%;
 Margin-left: auto;
@@ -78,7 +78,7 @@ font-size: 3em;
 
 h2 {
  font-weight: normal;
-font-family: "Menlo";
+font-family: "Arial Light";
 line-height: 100%;
 Margin-left: auto;
 Margin-right: auto;
@@ -88,7 +88,7 @@ Font-size: 2em;
 
 h3 {
  font-weight: normal;
-font-family: "Menlo";
+font-family: "Arial Light";
 line-height: 40%;
 Margin-left: auto;
 Margin-right: auto;
@@ -98,7 +98,7 @@ Font-size: 1.3em;
 
 h4 {
  font-weight: normal;
-font-family: "Menlo";
+font-family: "Arial Light";
 line-height: 40%;
 Margin-left: auto;
 Margin-right: auto;
