--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         font-family: 'Arial Light';
         font-weight: 400;
         font-style: normal;
-        src: url('/ArialMTStd-Light.otf') format('truetype');
+        src: url('https://harrietdimaio.github.io/hdmdesign/ArialMTStd-Light.otf') format('truetype');
         unicode-range: U+0020-007E, U+2010, U+2013-2014, U+2018-2019, U+201C-201D;
         font-display: swap
     }
