--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ Font-size: 1.3em;
 	</div>
 	<div class="column middle">
 		<img src="https://harrietdimaio.github.io/hdmdesign/image.png" width="200">
-		<h1>HDM Design</h1>
+		<img src="https://harrietdimaio.github.io/hdmdesign/logo.png" width="300">
 		<img src="https://harrietdimaio.github.io/hdmdesign/line.png" width="200">
 		<h3>Harriet Di Maio - Designer</h3>
 		<h4>021437787</h4>
