--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ h1 {
  font-weight: normal;
 font-family: "Arial Light";
 font-stretch: expanded;
-line-height: 50%;
+line-height: 80%;
 Margin-left: auto;
 Margin-right: auto;
 Text-align: center;
@@ -136,10 +136,14 @@ Font-size: 1.3em;
 
 <div id="content-mobile">
 <h3> Interior design</h3>
+<img src="https://harrietdimaio.github.io/hdmdesign/chairs.png" width="200">
+<br>
 </div>
 
 <div id="content-mobile">
+<br>
 <h3> Set painting and design</h3>
+<img src="https://harrietdimaio.github.io/hdmdesign/setdesign.png" width="400">
 </div>
 
 
