--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@ Text-align: center;
 Font-size: 1.3em;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 
 </style>
 
@@ -121,7 +127,7 @@ Font-size: 1.3em;
 	</div>
 	<div class="column middle">
 		<img src="https://harrietdimaio.github.io/hdmdesign/image.png" width="200">
-		<img src="https://harrietdimaio.github.io/hdmdesign/logo.png" width="300">
+		<img src="https://harrietdimaio.github.io/hdmdesign/logo.png" class="center">
 		<img src="https://harrietdimaio.github.io/hdmdesign/line.png" width="200">
 		<h3>Harriet Di Maio - Designer</h3>
 		<h4>021437787</h4>
