--- a/index.html
+++ b/index.html
@@ -103,14 +103,7 @@ line-height: 40%;
 Margin-left: auto;
 Margin-right: auto;
 Text-align: center;
-Font-size: 1.3em;
-}
-
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+Font-size: 1.1em;
 }
 
 </style>
@@ -127,7 +120,7 @@ Font-size: 1.3em;
 	</div>
 	<div class="column middle">
 		<img src="https://harrietdimaio.github.io/hdmdesign/image.png" width="200">
-		<img src="https://harrietdimaio.github.io/hdmdesign/logo.png" class="center">
+		<img src="https://harrietdimaio.github.io/hdmdesign/logo.png" width="200">
 		<img src="https://harrietdimaio.github.io/hdmdesign/line.png" width="200">
 		<h3>Harriet Di Maio - Designer</h3>
 		<h4>021437787</h4>
