--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ Font-size: 1.1em;
 </div>
 
 <div id="content-mobile">
+<img src="https://harrietdimaio.github.io/hdmdesign/line.png" width="200">
 <h3> Interior design</h3>
 <img src="https://harrietdimaio.github.io/hdmdesign/chairs.png" width="200">
 <br>
