--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Font-size: 1.1em;
 	<div class="column left">
 		<br><br><br><br><br><br><br><br>
 		<h2 class="hidden-mobile">Interior design</h2>
-		<img class="hidden-mobile" src="https://harrietdimaio.github.io/hdmdesign/chairs.png" width="200">
+		<img class="hidden-mobile" src="https://harrietdimaio.github.io/hdmdesign/interiordesign.png" width="200">
 	</div>
 	<div class="column middle">
 		<img src="https://harrietdimaio.github.io/hdmdesign/image.png" width="200">
