--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@ Margin-right: auto;
 Text-align: center;
 Font-size: 1.1em;
 }
+	
+p {
+text-align: center;
+font-size: 0.5em;
+}
 
 </style>
 
@@ -146,6 +151,9 @@ Font-size: 1.1em;
 <img src="https://harrietdimaio.github.io/hdmdesign/setdesign.png" width="400">
 </div>
 
+<footer>
+	<p>Press • Testimonials • Recent projects</p>
+</footer>
 
 
 
