--- a/index.html
+++ b/index.html
@@ -121,39 +121,39 @@ font-family: "Arial Light";
 <div class="row">
 	<div class="column left">
 		<br><br><br><br><br><br><br><br>
-		<h2 class="hidden-mobile">Interior design</h2>
+		<h2 class="hidden-mobile">INTERIOR DESIGN</h2>
 		<img class="hidden-mobile" src="https://harrietdimaio.github.io/hdmdesign/interiordesign.png" width="200">
 	</div>
 	<div class="column middle">
 		<img src="https://harrietdimaio.github.io/hdmdesign/image.png" width="200">
 		<img src="https://harrietdimaio.github.io/hdmdesign/logo.png" width="200">
 		<img src="https://harrietdimaio.github.io/hdmdesign/line.png" width="200">
-		<h3>Harriet Di Maio - Designer</h3>
+		<h3>HARRIET DI MAIO - DESIGNER</h3>
 		<h4>021437787</h4>
-		<h4><a href="mailto:harriet@hdmdesign.co.nz">harriet@hdmdesign.co.nz</a></h4>
+		<h4><a href="mailto:harriet@hdmdesign.co.nz">HARRIET@HDMDESIGN.CO.NZ</a></h4>
 	</div>
 	<div class="column right"
 		<br><br><br><br><br><br><br><br><br>
-		<h2 class="hidden-mobile">Set painting & design</h2>
+		<h2 class="hidden-mobile">SET PAINTING & DESIGN</h2>
 		<img class="hidden-mobile" src="https://harrietdimaio.github.io/hdmdesign/setdesign.png" width="400">
 	</div>
 </div>
 
 <div id="content-mobile">
 <img src="https://harrietdimaio.github.io/hdmdesign/line.png" width="200">
-<h3> Interior design</h3>
+<h3>INTERIOR DESIGN</h3>
 <img src="https://harrietdimaio.github.io/hdmdesign/chairs.png" width="200">
 <br>
 </div>
 
 <div id="content-mobile">
 <br>
-<h3> Set painting and design</h3>
+<h3>SET PAINTING & DESIGN</h3>
 <img src="https://harrietdimaio.github.io/hdmdesign/setdesign.png" width="400">
 </div>
 
 <footer>
-	<p>Press • Testimonials • Recent projects</p>
+	<p>PRESS • TESTIMONIALS • RECENT PROJECTS</p>
 </footer>
 
 
