--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ font-family: "Arial Light";
 		<img class="hidden-mobile" src="https://harrietdimaio.github.io/hdmdesign/interiordesign.png" width="200">
 	</div>
 	<div class="column middle">
-		<img src="https://harrietdimaio.github.io/hdmdesign/image.png" width="200">
+		<img src="https://harrietdimaio.github.io/hdmdesign/me.png" width="200">
 		<img src="https://harrietdimaio.github.io/hdmdesign/logo.png" width="200">
 		<img src="https://harrietdimaio.github.io/hdmdesign/line.png" width="200">
 		<h3>HARRIET DI MAIO - DESIGNER</h3>
