--- a/index.html
+++ b/index.html
@@ -112,6 +112,11 @@ font-size: 0.9em;
 font-family: "Arial Light";
 }
 
+a:link {color: black;}      /* unvisited link */
+a:visited {color: black;}   /* visited link */
+a:hover {color: black;}     /* mouse over link */
+a:active {color: black;}
+
 </style>
 
 </head>
